# Autoresearch_ideas

./: .gitignore  README.md
books/: .gitignore
configs/: base.yaml
docs/: 01_literature_summary.md  02_architecture_proposal.md  03_training_eval_plan.md  04_open_questions.md  (+6 more)
rwkv-mobile/: .gitignore  CMakeLists.txt  LOCAL_MLX_TEST.md  README.md  README_API.md  README_translate.md
rwkv-mobile/.github/workflows/: build.yml
rwkv-mobile/assets/: b_othello_vocab.txt  b_rwkv_vocab_v20230424_sparktts.txt  b_rwkv_vocab_v20230424_sparktts_spct_tokens.txt  b_rwkv_vocab_v20230424_tts.txt  b_sudoku_vocab.txt  calibration_data_v5_rc.txt  rwkv_vocab_v20230424_sparktts.txt  rwkv_vocab_v20230424_sparktts_spct_tokens.txt
rwkv-mobile/cmake/: arm64-windows-llvm.cmake  disable_unused_ncnn_layers.cmake  kaldifst.cmake
rwkv-mobile/converter/: benchmark_rwkv_coreml.py  convert_hf_rwkv7_to_mlx.py  convert_rwkv_jellyfish_to_ncnn.py  convert_rwkv_pth_to_gguf.py  convert_rwkv_to_ncnn.py  convert_rwkv_to_onnx.py  convert_rwkv_to_safetensors.py  convert_state_to_rmpack.py  convert_vocab.py  ncnn_model_utils.py  test_rwkv_coreml.py  test_rwkv_coreml_values.py  test_rwkv_onnx.py
rwkv-mobile/converter/rwkv-coreml/: compile.sh  convert_rwkv_to_coreml.py  convert_rwkv_to_coreml_lut4_mixed.py  convert_rwkv_to_coreml_lut4_skm.py
rwkv-mobile/converter/rwkv-coreml/rwkv_src/: rwkv_modeling.py  rwkv_v7_modules.py
rwkv-mobile/converter/rwkv_src/: elemwise_ops.py  model_utils.py  rwkv_modeling.py  rwkv_v5_modules.py  rwkv_v6_modules.py  rwkv_v7_modules.py
rwkv-mobile/examples/: CMakeLists.txt  batch_benchmark.cpp  benchmark_vision_encoder.cpp  lambada.cpp  mmlu.cpp  quantize_clip.cpp  rwkv_server.cpp  simple_benchmark.cpp  test_chat.cpp  test_chat_batch.cpp  test_chat_c_api.cpp  test_chat_load_state.cpp  test_chat_resume.cpp  test_chat_save_state.cpp  test_clear_states.cpp  test_embedding.cpp  test_generate.cpp  test_generate_topk.cpp  test_generation_batch.cpp  test_model_reloading.cpp  test_multiple_models.cpp  test_multiple_models_tts.cpp  test_othello.cpp  test_soc_detect.cpp  test_state_loading.cpp  test_state_matching.cpp  test_sudoku.cpp  test_tts.cpp  test_vision_encoder_with_adapter.cpp  test_vocab_loading.cpp  test_whisper_encoder.cpp
rwkv-mobile/examples/flutter/ffigen/: rwkv_mobile.dart
rwkv-mobile/src/: backend.cpp  backend.h  c_api.cpp  c_api.h  commondef.h  half.hpp  logger.cpp  logger.h  rmpack.cpp  rmpack.h  runtime.cpp  runtime.h  rwkv_http_server.cpp  rwkv_http_server.h  sampler.cpp  sampler.h  soc_detect.cpp  soc_detect.h  tensor.h  tokenizer.cpp  tokenizer.h  trie.hpp  utils.h
rwkv-mobile/src/backends/coreml/: coreml_rwkv_backend.cpp  coreml_rwkv_backend.h  rwkv-coreml.h  rwkv-coreml.mm  rwkv_coreml_firstchunk_impl.h  rwkv_coreml_firstchunk_impl.m  rwkv_coreml_impl.h  rwkv_coreml_impl.m  rwkv_coreml_singlechunk_impl.h  rwkv_coreml_singlechunk_impl.m
rwkv-mobile/src/backends/llama_cpp/: llama_cpp_backend.cpp  llama_cpp_backend.h
rwkv-mobile/src/backends/mlx/: mlx_rwkv_backend.cpp  mlx_rwkv_backend.h
rwkv-mobile/src/backends/mlx/include/: MLXModelFFI.h
rwkv-mobile/src/backends/mlx/prebuilt/ios-arm64/: default.metallib
rwkv-mobile/src/backends/mlx/prebuilt/macos-arm64/: default.metallib
rwkv-mobile/src/backends/mnn/: mnn_rwkv_backend.cpp  mnn_rwkv_backend.h
rwkv-mobile/src/backends/mtk_np7/: mtk_np7_backend.cpp  mtk_np7_backend.h
rwkv-mobile/src/backends/mtk_np7/include/: llm_types.h  rwkv_mtk.h
rwkv-mobile/src/backends/ncnn/: ncnn_rwkv_backend.cpp  ncnn_rwkv_backend.h
rwkv-mobile/src/backends/qnn/: qnn_backend.cpp  qnn_backend.h
rwkv-mobile/src/backends/qnn/rwkv-qualcomm/: QnnTypeDef.hpp
rwkv-mobile/src/backends/qnn/rwkv-qualcomm/PAL/src/windows/: Directory.cpp  FileOp.cpp  Path.cpp
rwkv-mobile/src/backends/qnn/rwkv-qualcomm/QNN/: QnnBackend.h  QnnCommon.h  QnnContext.h  QnnGraph.h  QnnInterface.h  QnnMem.h  QnnOpDef.h  QnnOpPackage.h  QnnProperty.h  QnnSdkBuildId.h  QnnTypes.h
rwkv-mobile/src/backends/qnn/rwkv-qualcomm/QNN/HTP/: QnnHtpCommon.h  QnnHtpContext.h  QnnHtpDevice.h  QnnHtpGraph.h  QnnHtpPerfInfrastructure.h  QnnHtpSystemContext.h
rwkv-mobile/src/backends/qnn/rwkv-qualcomm/QNN/HTP/core/: afuncs.h  bake_defs.h  bfloat16.h  build_options_pub.h  constraints.h  crate.h  ctor_hook.h  dcrate_inlines.h  deser_concurrent.h  deser_concurrent_defs.h  deserializer.h  dtype.h  dtype_enum.h  executable.h  flags.h  forward_classes.h  graph_handle_defs.h  graph_status.h  interface.h  intrinsics.h  log.h  memory_layout.h  oexpr.h  op.h  op_def.h  op_info.h  op_io_ptrs.h  op_register.h  op_register_ext.h  op_register_types.h  op_registry.h  ops_opts_registration.h  ops_opts_registration_defs.h  optimize.h  optimize_defs.h  optimize_flags.h  pickle_header_tags.h  serialize_oplist.h  serialize_register.h  simple_reg.h  (+6 more)
rwkv-mobile/src/backends/qnn/rwkv-qualcomm/QNN/HTP/core/tens/: block_enumeration.h  tensor_base.h  tensor_concrete.h  tensor_definitions.h  tensor_generator.h
rwkv-mobile/src/backends/qnn/rwkv-qualcomm/QNN/System/: QnnSystemCommon.h  QnnSystemContext.h  QnnSystemDlc.h  QnnSystemInterface.h  QnnSystemProfile.h  QnnSystemTensor.h
rwkv-mobile/src/backends/qnn/rwkv-qualcomm/Utils/: ClientBuffer.cpp  ClientBuffer.hpp  DataUtil.cpp  DmaBufAllocator.cpp  DmaBufAllocator.hpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IOTensor.cpp  IOTensor.hpp  RpcMem.cpp  RpcMem.hpp  Utils.cpp  Utils.hpp
rwkv-mobile/src/backends/web_rwkv/: web_rwkv_backend.cpp  web_rwkv_backend.h
rwkv-mobile/src/backends/web_rwkv/include/: web_rwkv_ffi.h
rwkv-mobile/src/embedding/: rwkv_embedding.cpp  rwkv_embedding.h
rwkv-mobile/src/multimodal/: multimodal_encoder.h
rwkv-mobile/src/multimodal/tts/: frontend_utils.cpp  frontend_utils.h  sparktts.cpp  sparktts.h  tts_properties.cpp  tts_properties.h
rwkv-mobile/src/multimodal/utils/: audio.cpp  audio.h  librosa.h
rwkv-mobile/src/multimodal/vision/: preprocessor.cpp  vision_encoder.cpp  vision_encoder.h
rwkv-mobile/src/multimodal/whisper/: whisper.cpp  whisper.h  whisper_encoder.cpp  whisper_encoder.h
(+349 files in other folders)
